# bilive-rec

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  config.example.toml
.github/workflows/: build.yml  ci.yml
docs/: ARCHITECTURE.md  architecture.md  release-article.md
docs/dev/: architecture.md
docs/guide/: configuration.md  getting-started.md  how-it-works.md
docs/reference/: cli.md  config-fields.md
src/: cli.rs  config.rs  credential.rs  error.rs  lib.rs  main.rs  submission_template.rs
src/bilibili/: cdn.rs  client.rs  mod.rs  room.rs  stream.rs  types.rs  wbi.rs
src/config/: defaults.rs  mod.rs  raw.rs  resolved.rs  validation.rs
src/pipeline/: bootstrap.rs  mod.rs  session.rs  state_machine.rs  supervisor.rs
src/recorder/: artifact_commit.rs  flv.rs  flv_metadata.rs  flv_pipeline.rs  mod.rs  segment.rs
src/state/: inspection.rs  mod.rs  model.rs  ownership.rs  recovery.rs  store.rs  transitions.rs
src/uploader/: biliup_adapter.rs  mod.rs  types.rs  validation.rs  work.rs  worker.rs
