[package]
name = "bilive-rec"
version = "0.1.0"
edition = "2024"
license = "Parity-7.0.0"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "process", "time"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
redb = "4"
jiff = { version = "0.2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
md5 = "0.8"
biliup = { git = "https://github.com/biliup/biliup.git", rev = "a529bbcbd2a3283efd9e2aeb204a32495391f702" }
futures = "0.3.32"

[dev-dependencies]
tempfile = "3"
